# edward

./: .coverage  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  bot.py  crontab  docker-compose-mongo.yml  docker-compose-stack.yml  docker-compose.yml  docker-stack.yml  docs.sh  edward.py  edward_memory.db  face_bot.py  list_5000  mongo_functions.py  pyproject.toml  requirements.txt  requirements.txt.archive  scratch.py  scratch_ainput.py  scratch_ollama.py
.github/workflows/: build.yml  ci.yml
src/edward/: __init__.py  __main__.py  cli.py
src/edward/core/: __init__.py  config.py  engine.py  llm.py  memory.py  shell.py
tests/: test_cli.py  test_engine.py  test_llm.py  test_main.py  test_memory.py  test_shell.py
