[project]
name = "edward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docopt>=0.6.2",
    "praw>=8.0.2",
    "pymongo>=4.17.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
